--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"    />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-
-
 
     <application
         android:allowBackup="true"
@@ -21,15 +20,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.INCAMPUS"
         android:usesCleartextTraffic="true">
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <activity
+            android:name=".Student"
+            android:exported="false"
+            android:theme="@style/Theme.INCAMPUS.NoActionBar" />
+        <activity
+            android:name=".Security"
+            android:exported="false"
+            android:theme="@style/Theme.INCAMPUS.NoActionBar" />
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <activity
-            android:name=".SecurityActivity"
-            android:exported="false" />
-        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:name=".StudentCard"
+            android:exported="false"
+            android:theme="@style/Theme.INCAMPUS.NoActionBar"/>
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation">
-        </activity>
+            tools:replace="screenOrientation" />
         <activity
             android:name=".LogIn"
             android:exported="true">
@@ -47,6 +58,5 @@
             android:exported="true"
             android:theme="@style/Theme.INCAMPUS.NoActionBar" />
     </application>
-
 
 </manifest>
